--- a/use-iron-session/package.json
+++ b/use-iron-session/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "iron-session": "^8.0.1",
     "lucide-react": "^0.372.0",
